fix: delete api 수정
